[gd_scene load_steps=2 format=3 uid="uid://bff1t2jfm5x3g"]

[ext_resource type="Script" uid="uid://cec2i7du4pyql" path="res://ui/hover_tooltip.gd" id="1_agaa3"]

[node name="HoverTooltip" type="Control"]
modulate = Color(1, 1, 1, 0.588235)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("1_agaa3")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ContentLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
